# ADHD-algorithms-comparison

./: .gitignore  README.md  load_global.py  pyproject.toml  requirements.txt  torch_cuda_avalible_test.py
checkpoints/: gat_SLD.pt  gat_SLD_summary.json  gat_SLI.pt  gat_SLI_summary.json  gat_SSD.pt  gat_SSD_summary.json  gat_SSI.pt  gat_SSI_summary.json  gat_VLD.pt  gat_VLD_summary.json  gat_VLI.pt  gat_VLI_summary.json  gat_VSD.pt  gat_VSD_summary.json  gat_VSI.pt  gat_VSI_summary.json  gcn_SLD.pt  gcn_SLD_summary.json  gcn_SLI.pt  gcn_SLI_summary.json  gcn_SSD.pt  gcn_SSD_summary.json  gcn_SSI.pt  gcn_SSI_summary.json  gcn_VLD.pt  gcn_VLD_summary.json  gcn_VLI.pt  gcn_VLI_summary.json  gcn_VSD.pt  gcn_VSD_summary.json  gcn_VSI.pt  gcn_VSI_summary.json  gt_SLD.pt  gt_SLD_summary.json  gt_SLI.pt  gt_SLI_summary.json  gt_SSD.pt  gt_SSD_summary.json  gt_SSI.pt  gt_SSI_summary.json  (+40 more)
output/evaluation/error_analysis/: all_models_wrong.csv  confusion_patterns.json  difficulty_summary.csv  difficulty_summary.json  easy_samples.csv  error_report.md  error_summary.csv  hard_samples.csv  (+2 more)
output/results_tables/: acc_table.csv  f1_table.csv  loss_table.csv
project_plan/: plan.tex
report/: report.aux  report.out  report.tex  report.toc
wmrc_experiments/: README.md  __init__.py  common.py  models.py  predict.py  run_full_tuning.py  summarize_results.py  summarize_tuning.py  summarize_tuning_best.py  train.py  train_all.py  tune_all.py
wmrc_experiments/evaluation/: __init__.py  __main__.py  error_analysis.py  metrics.py  statistical_tests.py  visualization.py
(+69 files in other folders)
