[project]
name = "data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown[pptx]>=0.1.6",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.14.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
